# opencv_contrib

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILDING.md  Doxyfile  LICENSE  Makefile  README.md  debug-env.sh
addons/: CMakeLists.txt  README.md
modules/alphamat/: CMakeLists.txt  README.md
modules/alphamat/perf/: perf_infoflow.cpp  perf_main.cpp  perf_precomp.hpp
modules/alphamat/samples/: alphamat_information_flow.cpp  information_flow_matting.cpp
modules/alphamat/src/: KDTreeVectorOfVectorsAdaptor.h  KtoU.cpp  KtoU.hpp  alphac.cpp  cm.cpp  cm.hpp  infoflow.cpp  intraU.cpp  intraU.hpp  local_info.cpp  local_info.hpp  precomp.hpp  trimming.cpp  trimming.hpp
modules/alphamat/test/: test_infoflow.cpp  test_main.cpp  test_precomp.hpp
modules/alphamat/tutorials/: alphamat_tutorial.markdown  table_of_content_alphamat.markdown
modules/apriltag/: CMakeLists.txt
modules/apriltag/src/: apriltag.cpp  precomp.hpp
modules/apriltag/test/: test_apriltagdetection.cpp  test_precomp.hpp
modules/c/: CMakeLists.txt
modules/c/src/: excluded_functions.cpp  genc.py  mat.cpp  point.cpp  rect.cpp  scalar.cpp  size.cpp
modules/cannops/: CMakeLists.txt  Dockerfile
modules/cannops/ascendc_kernels/: CMakeLists.txt  kernel_tiling_types.h  threshold_opencv_kernel.cpp  vector_tiling.h
modules/cannops/perf/: perf_core.cpp  perf_cvtcolor.cpp  perf_element_operations.cpp  perf_main.cpp  perf_precomp.hpp
modules/cannops/samples/: image_processing.cpp  image_processing.py
modules/cannops/src/: ascend_mat.cpp  cann_call.cpp  color.cpp  core.cpp  dvpp_call.cpp  element_operations.cpp  precomp.hpp
modules/cannops/test/: test_core.cpp  test_cvtcolor.cpp  test_element_operations.cpp  test_kernel.cpp  test_main.cpp  test_npumat.cpp  test_precomp.hpp  test_utils.cpp
modules/cannops/tutorials/: ascend_npu_image_processing.markdown
modules/cnn_3dobj/: CMakeLists.txt  FindCaffe.cmake  FindGlog.cmake  FindProtobuf.cmake  Makefile  README.md  cmake_install.cmake  cnn_3dobj_config.hpp.in  opencv_cnn_3dobj_pch_dephelp.cxx  precomp.hpp
modules/cnn_3dobj/.cnn_3dobj/: Makefile  cmake_install.cmake
modules/cnn_3dobj/doc/: cnn_3dobj.bib
modules/cnn_3dobj/images/: shot_ape_1.txt
modules/cnn_3dobj/samples/: CMakeLists.txt  classify.cpp  classifyDB_demo.cpp  classifyIMG_demo.cpp  cnn_3dobj_demo.cpp  datagen.sh  datagen_all.sh  datagen_back.sh  datagen_front.sh  datatrans_demo.cpp  demo_classify.cpp  demo_model_analysis.cpp  demo_sphereview_data.cpp  demo_video.cpp  featstore.sh  feature_extract_demo.cpp  feature_extraction.cpp  image2db.cpp  images2db_demo.cpp  model_analysis_demo.cpp  sphereview_3dobj_demo.cpp  sphereview_data.cpp  test_main.cpp  video.cpp
modules/cnn_3dobj/src/: cnn_3dobj.cpp  cnn_classification.cpp  cnn_datatrans.cpp  cnn_feature.cpp  cnn_image2db.cpp  cnn_sphereview.cpp  precomp.hpp
modules/cnn_3dobj/test/: ape.ply  test_cnn_3dobj.cpp  test_cnn_3dobj_feature_extract.cpp  test_precomp.hpp
modules/cnn_3dobj/tutorials/: table_of_content_cnn_3dobj.markdown
modules/cudev/: CMakeLists.txt
modules/cudev/test/: CMakeLists.txt  test_cvt.cu  test_integral.cu  test_nd.cu  test_split_merge.cu  test_warp.cu
modules/cvv/: CMakeLists.txt  README.md
modules/cvv/doc/: cvv.rst
modules/cvv/samples/: cvv_demo.cpp
modules/cvv/test/: test_debug_flag.cpp  test_is_any_of.cpp  test_location.cpp  test_main.cpp  test_observer_ptr.cpp  test_precomp.hpp  test_reference.cpp
modules/cvv/tutorials/: visual_debugging_introduction.markdown
modules/datasets/: CMakeLists.txt  README.md
modules/datasets/doc/: datasets.rst  fr_lfw.rst  gr_chalearn.rst  hpe_humaneva.rst  ir_affine.rst  ir_robot.rst  is_bsds.rst  msm_epfl.rst  msm_middlebury.rst  or_imagenet.rst  or_mnist.rst  or_sun.rst  slam_kitti.rst
modules/datasets/samples/: ar_hmdb.cpp  ar_hmdb_benchmark.cpp  ar_sports.cpp  fr_adience.cpp  fr_adience_toh5.cpp  fr_lfw.cpp  fr_lfw_benchmark.cpp  gr_chalearn.cpp  gr_skig.cpp  hpe_humaneva.cpp  hpe_parse.cpp  ir_affine.cpp  ir_robot.cpp  is_bsds.cpp  is_weizmann.cpp  msm_epfl.cpp  msm_middlebury.cpp  or_imagenet.cpp  or_mnist.cpp  or_pascal.cpp  or_sun.cpp  pd_caltech.cpp  pd_inria.cpp  saliency_mit1003Sample.cpp  slam_kitti.cpp  slam_tumindoor.cpp  sr_bsds.cpp  sr_div2k.cpp  sr_general100.cpp  tr_chars.cpp  tr_chars_benchmark.cpp  tr_icdar.cpp  tr_icdar_benchmark.cpp  tr_svt.cpp  tr_svt_benchmark.cpp  track_vot.cpp
modules/datasets/src/: ar_hmdb.cpp  ar_sports.cpp  dataset.cpp  fr_adience.cpp  fr_lfw.cpp  gr_chalearn.cpp  gr_skig.cpp  hpe_humaneva.cpp  hpe_parse.cpp  ir_affine.cpp  ir_robot.cpp  is_bsds.cpp  is_weizmann.cpp  msm_epfl.cpp  msm_middlebury.cpp  or_imagenet.cpp  or_mnist.cpp  or_pascal.cpp  or_sun.cpp  pd_caltech.cpp  pd_inria.cpp  precomp.hpp  (+13 more)
modules/dnn/: CMakeLists.txt
modules/dnn_modern/: CMakeLists.txt  README.md
modules/dnn_objdetect/: CMakeLists.txt  FindGlog.cmake  FindProtobuf.cmake  README.md
modules/dynamicfusion/: CMakeLists.txt  README.md  download_data.sh
modules/gestures/: CMakeLists.txt  FindCaffe.cmake  README.md
modules/graphmodels/: CMakeLists.txt
modules/haskell/: CMakeLists.txt
modules/hdf/: CMakeLists.txt  README.md
modules/julia/: CMakeLists.txt  FindJulia.cmake  LICENSE  README.md  function_list.md
modules/line_descriptor/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake
modules/ovis/: CMakeLists.txt  README.md
modules/photoeffects/: CMakeLists.txt
modules/ptcloud/: CMakeLists.txt  README.md
modules/quality/: CMakeLists.txt  README.md
modules/rgbd/: CMakeLists.txt  FindOpenNL.cmake  LICENSE_WillowGarage.md  README.md  rgbd_config.hpp.in
modules/ruby/: CMakeLists.txt
modules/saliency/: .cproject  .project  CMakeLists.txt  README.md
modules/sfm/: CMakeLists.txt  README.md
modules/slam/: CMakeLists.txt  README.md
modules/text/: CMakeLists.txt  FindCaffe.cmake  FindGlog.cmake  FindProtobuf.cmake  FindQT5.cmake  FindQt5Gui.cmake  FindTesseract.cmake  README.md  text_config.hpp.in
modules/v4d/: .gitignore  CMakeLists.txt
(+5373 files in other folders)
